[build-system]
requires = ["setuptools", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "ccm_tool"
dynamic = ["version"]
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "NiMARE",
  "nilearn",
  "boto3",
  "tqdm",
  "seaborn",
  "statsmodels",
]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "ccm_tool/_version.py"
versionfile_build = "ccm_tool/_version.py"
tag_prefix = "v"
parentdir_prefix = ""